added jumbotron and changed the style

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 </head>
 
 <body>
-    <h1 style="font-family: 'Limelight', cursive;">The Detective</h1>
-
+    
+    <div class="jumbotron">
+            <h1 class="display4" style="font-family: 'Limelight', cursive;text-align:center;">The Detective</h1>
+            <p class="lead" style="font-family: 'Limelight', cursive;text-align:center;">Train your detective skills and guess the letter selected by the criminal!</p>
+            <hr class="my-4">
+            <p style="font-family: 'Limelight', cursive;text-align:center;">You will get 10 guesses a game. Good luck Detective!</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          </div>
+    
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
