more style changes to the jumbotron

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <title>The Psychic Game</title>
 </head>
 
-<body>
+<body style=background-color:black;>
     
-    <div class="jumbotron">
-            <h1 class="display4" style="font-family: 'Limelight', cursive;text-align:center;">The Detective</h1>
-            <p class="lead" style="font-family: 'Limelight', cursive;text-align:center;">Train your detective skills and guess the letter selected by the criminal!</p>
-            <hr class="my-4">
-            <p style="font-family: 'Limelight', cursive;text-align:center;">You will get 10 guesses a game. Good luck Detective!</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div class="jumbotron" style="height:300px;background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/92/Queens_Borough%2C_New_York_City%2C_1910-1920%3B_the_borough_of_homes_and_industry%2C_a_descriptive_and_illustrated_book_setting_forth_its_wonderful_growth_and_development_in_commerce%2C_industry_and_homes_%2814778805361%29.jpg);background-size:100%100%;">
+            <h1 class="display4" style="color:maroon;font-weight:bolder;font-family: 'Limelight', cursive;text-align:center;">The Detective</h1>
+            <p class="lead" style="color:maroon;font-weight:bolder;font-family: 'Limelight', cursive;text-align:center;">Train your detective skills and guess the letter selected by the criminal!</p>
+            <p style="color:maroon;font-weight:bolder;font-family: 'Limelight', cursive;text-align:center;">You will get 10 guesses a game. Good luck Detective!</p>
           </div>
     
     <script type="text/javascript" src="assets/javascript/game.js"></script>
