--- a/index.html
+++ b/index.html
@@ -8,26 +8,46 @@
     <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-        <title>The Detective</title>
-    </head>
+    <title>The Detective</title>
+</head>
 
 <body style=background-color:black;>
-<!--Game Title-->
+    <!--Game Title-->
     <div class="container-fluid" style="padding:10px;background-color:black;padding:0;width:100%;margin-top:10px;">
         <h1 class="display4" style="color:#ffffff;font-weight:bolder;font-family: 'Limelight', cursive;text-align:center;width:100%;height:100%;">The
             Detective</h1>
         <!--Jumbotron-->
-        <div class="container-fluid" style="border-top-style:solid;border-top-width:normal;border-top-color:#ffffff;border-bottom-style:solid;border-bottom-width:normal;border-bottom-color:#ffffff;background-color:maroon;padding:20px;height:340px;">    
-        <div class="jumbotron" style="margin-left:15%;width:70%;padding-left:0;padding-right:0;padding-top:0px;height:300px;background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/92/Queens_Borough%2C_New_York_City%2C_1910-1920%3B_the_borough_of_homes_and_industry%2C_a_descriptive_and_illustrated_book_setting_forth_its_wonderful_growth_and_development_in_commerce%2C_industry_and_homes_%2814778805361%29.jpg);background-size:100%100%;">
-        </div></div>
+        <div class="container-fluid" style="border-top-style:solid;border-top-width:normal;border-top-color:#ffffff;border-bottom-style:solid;border-bottom-width:normal;border-bottom-color:#ffffff;background-color:maroon;padding:20px;height:340px;">
+            <div class="jumbotron" style="margin-left:15%;width:70%;padding-left:0;padding-right:0;padding-top:0px;height:300px;background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/92/Queens_Borough%2C_New_York_City%2C_1910-1920%3B_the_borough_of_homes_and_industry%2C_a_descriptive_and_illustrated_book_setting_forth_its_wonderful_growth_and_development_in_commerce%2C_industry_and_homes_%2814778805361%29.jpg);background-size:100%100%;">
+            </div>
+        </div>
     </div>
+    <!--Instructions-->
     <div class="container-fluid" style="margin-top:10px;">
         <p class="lead" style="color:#ffffff;;font-weight:bolder;font-family: 'Limelight', cursive;text-align:center;">Train
             your detective skills and guess the letter selected by the criminal!</p>
         <p style="color:#ffffff;;font-weight:bolder;font-family: 'Limelight', cursive;text-align:center;">You will
-            get 10
-            guesses a game. Good luck Detective!</p>
+            get 10 guesses a game. Good luck Detective!</p>
     </div>
+    <!--Game-->
+    <div class="row">
+            <div class="col-4">
+              <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Wins:</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Losses:</a>
+                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Guesses Left:</a>
+                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Your Guesses So Far:</a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>
+                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+              </div>
+            </div>
+          </div>
 
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
