--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--Game-->
     <div class="row">
             <div class="col-4">
-              <div class="list-group" id="list-tab" role="tablist">
+              <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:normal; border-color:maroon;">
                 <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Wins:</a>
                 <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Losses:</a>
                 <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Guesses Left:</a>
