--- a/index.html
+++ b/index.html
@@ -31,25 +31,23 @@
     </div>
     <!--Game-->
     <div class="row">
+        <div class="col-4">
+        </div>
+        <div class="col-4">
+            <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:normal; border-color:maroon;">
+                <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home"
+                    role="tab" aria-controls="home">Wins:</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile"
+                    role="tab" aria-controls="profile">Losses:</a>
+                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages"
+                    role="tab" aria-controls="messages">Guesses Left:</a>
+                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings"
+                    role="tab" aria-controls="settings">Your Guesses So Far:</a>
+            </div>
             <div class="col-4">
-              <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:normal; border-color:maroon;">
-                <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Wins:</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Losses:</a>
-                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Guesses Left:</a>
-                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Your Guesses So Far:</a>
-              </div>
             </div>
-            <div class="col-8">
-              <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>
-                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
-                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
-                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
-              </div>
-            </div>
-          </div>
-
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+        </div>
+        <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
 </html>
