added img of prisoner and added border as well as make it responsive and added border

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1 class="display4" style="color:#ffffff;font-weight:bolder;font-family: 'Limelight', cursive;text-align:center;width:100%;height:100%;">The
             Detective</h1>
         <!--Jumbotron-->
-        <div class="container-fluid" style="border-top-style:solid;border-top-width:normal;border-top-color:#ffffff;border-bottom-style:solid;border-bottom-width:normal;border-bottom-color:#ffffff;background-color:maroon;padding:20px;height:340px;">
-            <div class="jumbotron" style="margin-left:15%;width:70%;padding-left:0;padding-right:0;padding-top:0px;height:300px;background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/92/Queens_Borough%2C_New_York_City%2C_1910-1920%3B_the_borough_of_homes_and_industry%2C_a_descriptive_and_illustrated_book_setting_forth_its_wonderful_growth_and_development_in_commerce%2C_industry_and_homes_%2814778805361%29.jpg);background-size:100%100%;">
+        <div class="container-fluid" style="border-top-style:solid;border-top-width:normal;border-top-color:#ffffff;border-bottom-style:solid;border-bottom-width:normal;border-bottom-color:#ffffff;background-color:maroon;padding:20px;height:280px;">
+            <div class="jumbotron" style="margin-left:15%;width:70%;padding-left:0;padding-right:0;padding-top:0px;height:235px;background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/92/Queens_Borough%2C_New_York_City%2C_1910-1920%3B_the_borough_of_homes_and_industry%2C_a_descriptive_and_illustrated_book_setting_forth_its_wonderful_growth_and_development_in_commerce%2C_industry_and_homes_%2814778805361%29.jpg);background-size:100%100%;">
             </div>
         </div>
     </div>
@@ -32,9 +32,11 @@
     <!--Game-->
     <div class="row">
         <div class="col-4">
+            <img style="height:201.8px;width:201.8px;margin-left:50%;border-style:solid;border-width:thick;border-color:maroon;" class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6"
+            alt="prisoner">
         </div>
         <div class="col-4">
-            <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:normal; border-color:maroon;">
+            <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:thick; border-color:maroon;">
                 <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home"
                     role="tab" aria-controls="home">Wins:</a>
                 <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile"
