added variable for the computers choises to pick from

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <!--Game-->
     <div class="row">
         <div class="col-4">
-            <img style="height:201.8px;width:201.8px;margin-left:50%;border-style:solid;border-width:thick;border-color:maroon;" class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6"
-            alt="prisoner">
+            <img style="height:201.8px;width:201.8px;margin-left:50%;border-style:solid;border-width:thick;border-color:maroon;"
+                class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6"
+                alt="prisoner">
         </div>
         <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:thick; border-color:maroon;">
@@ -48,7 +49,8 @@
             </div>
             <div class="col-4">
             </div>
-        </div>
+            </div>
+        
         <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
