--- a/index.html
+++ b/index.html
@@ -38,19 +38,27 @@
         </div>
         <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:thick; border-color:maroon;">
-                <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home"
-                    role="tab" aria-controls="home">Wins:</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile"
-                    role="tab" aria-controls="profile">Losses:</a>
-                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages"
-                    role="tab" aria-controls="messages">Guesses Left:</a>
-                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings"
-                    role="tab" aria-controls="settings">Your Guesses So Far:</a>
+                <div id="wins">
+                    <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home"
+                        role="tab" aria-controls="home">Wins:</a>
+                </div>
+                <div id="losses">
+                    <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile"
+                        role="tab" aria-controls="profile">Losses:</a>
+                </div>
+                <div id="guessesLeft">
+                    <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages"
+                        role="tab" aria-controls="messages">Guesses Left:</a>
+                </div>
+                <div id="guessesedLetters">
+                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings"
+                        role="tab" aria-controls="settings">Your Guesses So Far:</a>
+                </div>
             </div>
             <div class="col-4">
             </div>
-            </div>
-        
+        </div>
+
         <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
