changed the game div and restarting javascript

--- a/index.html
+++ b/index.html
@@ -33,33 +33,22 @@
     <div class="row">
         <div class="col-4">
             <img style="height:201.8px;width:201.8px;margin-left:50%;border-style:solid;border-width:thick;border-color:maroon;"
-                class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6"
-                alt="prisoner">
+                class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6">
+            alt="prisoner">
         </div>
         <div class="col-4">
-            <div class="list-group" id="list-tab" role="tablist" style="border-style:solid; border-width:thick; border-color:maroon;">
-                <div id="wins">
-                    <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home"
-                        role="tab" aria-controls="home">Wins:</a>
-                </div>
-                <div id="losses">
-                    <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile"
-                        role="tab" aria-controls="profile">Losses:</a>
-                </div>
-                <div id="guessesLeft">
-                    <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages"
-                        role="tab" aria-controls="messages">Guesses Left:</a>
-                </div>
-                <div id="guessesedLetters">
-                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings"
-                        role="tab" aria-controls="settings">Your Guesses So Far:</a>
-                </div>
-            </div>
-            <div class="col-4">
-            </div>
+                <div id="game" style="background-color:#ffffff;">
+                        <p>Total Wins: </p>
+                        <p>Total Losses: </p>
+                        <p>Guesses Left: </p>
+                        <p>Your Guesses so far: </p>
         </div>
+        <div class="col-4">
+        </div>
+    </div>
+    </div>
 
-        <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
 </html>
