--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <div class="row">
         <div class="col-4">
             <img style="height:201.8px;width:201.8px;margin-left:50%;border-style:solid;border-width:thick;border-color:maroon;"
-                class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6">
+                class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6"
             alt="prisoner">
         </div>
         <div class="col-4">
-                <div id="game" style="background-color:#ffffff;">
+                <div id="game" style="background-color:#ffffff;height:201.8px;border-style:solid;border-width:thick;border-color:maroon;">
                         <p>Total Wins: </p>
                         <p>Total Losses: </p>
                         <p>Guesses Left: </p>
