--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--Game-->
     <div class="row">
         <div class="col-4">
-            <img style="height:227.6px;width:227.6px;margin-left:50%;border-style:solid;border-width:thick;border-color:maroon;"
+            <img style="height:268x;width:167px;margin-left:50%;border-style:solid;border-width:thick;border-color:maroon;"
                 class="img-thumbnail" src="https://us.123rf.com/450wm/chromaco/chromaco1303/chromaco130300043/18252800-prisoner-or-criminal-with-determined-face-and-ball-and-chain-cartoon-image.jpg?ver=6"
             alt="prisoner">
         </div>
@@ -42,11 +42,21 @@
                         <p>Total Losses: </p>
                         <p>Guesses Left: </p>
                         <p>Your Guesses so far: </p>
-        </div>
+        </div></div>
         <div class="col-4">
         </div>
     </div>
     </div>
+    <div class="row">
+   <div class="col-4">
+ </div>       
+ <div class="col-4">
+    <p style="color:#ffffff;margin-left:30%;font-family: 'Limelight', cursive;">Type Here!</p>    
+    <textarea style="margin-right:auto;margin-left:30%;padding-bottom:10px;font-family: 'Limelight', cursive;"></textarea>
+    </div>
+<div class="col-4">
+</div>
+</div>
 
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
