--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
    <div class="col-4">
  </div>       
  <div class="col-4">
-    <p style="color:#ffffff;margin-left:30%;font-family: 'Limelight', cursive;">Type Here!</p>    
-    <textarea style="margin-right:auto;margin-left:30%;padding-bottom:10px;font-family: 'Limelight', cursive;"></textarea>
+    <p style="color:#ffffff;font-family: 'Limelight', cursive;text-align:center;">Type Here!</p>    
+    <textarea style="margin-right:auto;margin-left:30%;padding-bottom:10px;font-family: 'Limelight', cursive;border-style:solid;border-width:thick;border-color:maroon;"></textarea>
     </div>
 <div class="col-4">
 </div>
